--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>NetflixRemake</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" sizes="180x180" href="assets/images/Netflix_Symbol_RGB.png">
+
 </head>
 <body>
   <app-root></app-root>
